fix: fix z-index on header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
 	box-sizing: border-box;
 	padding-top: 44px;
 	border-radius: 0 0 24px 24px;
-	z-index: 2;
+	z-index: 1;
 	display: flex;
 	align-items: end;
 
@@ -26,6 +26,7 @@
 		background-color: #ffffff;
 		border-radius: 24px;
 		gap: 36px;
+		z-index: 2;
 
 		&_scrolling {
 			box-shadow: 0px 12px 19px -5px rgba(0, 0, 0, 0.08);
